# heroku-hello-world

./: .gitignore  Cargo.toml  Procfile  index.html
.github/workflows/: rust.yml
pkg/: hello_world.d.ts  hello_world.js  hello_world_bg.wasm  hello_world_bg.wasm.d.ts  package.json
src/: default.wgsl  hash.wgsl  lib.rs  main.rs  shader.rs  shader.wgsl  state.rs  tests.rs  texture.rs
src/state/: mod.rs  time.rs
src/state/camera/: controller.rs  mod.rs
src/state/geometry/: mod.rs  model.rs  quad.rs
src/state/texture/: mod.rs
src/state/uniform/: camera.rs  mod.rs  system.rs
src/state/uniforms/: bindings.rs  mod.rs
static/pkg/: hello_world.js  hello_world_bg.wasm  hello_world_bg.wasm.d.ts
