[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "CanvasRenderingContext2d",
    "CanvasGradient",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
