[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.12", features = [ "derive" ] }
cfg-if = "1"
log = "0.4"
wgpu = "0.14"
winit = "0.27"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.9"
pollster = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "0.2"
console_error_panic_hook = "0.1"
wgpu = { version = "0.14", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[[bin]]
name = "entrance"
path = "src/main.rs"